fix pre -> pre-wrap

--- a/app/assets/stylesheets/markdown.css.scss
+++ b/app/assets/stylesheets/markdown.css.scss
@@ -56,7 +56,7 @@
     font-size: 12px;
   }
   pre {
-    white-space: pre;
+    white-space: pre-wrap;
     code {
       display: block;
       padding: .25em .5em .3em .5em;
